k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prassl-backend
spec:
  selector:
    matchLabels:
      app: prassl-backend
  template:
    metadata:
      labels:
        app: prassl-backend
    spec:
      containers:
      - name: prassl-backend
        image: image-registry.openshift-image-registry.svc:5000/prassl/prassl-backend
