k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prassl-mongo
spec:
  selector:
    matchLabels:
      app: prassl-mongo
  template:
    metadata:
      labels:
        app: prassl-mongo
    spec:
      containers:
      - name: prassl-mongo
        image: mongo:5.0.9
