k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: prassl-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: prassl-frontend
