k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prassl-mongo
  labels:
    app: prassl-mongo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: prassl-mongo
  sessionAffinity: None
