k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prassl-backend
  name: prassl-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: prassl-backend
  sessionAffinity: None
